<resources>
    <string name="app_name">MyTravel</string>
    <string name="logo_content">This is the app logo</string>
    <string name="username">Username</string>
    <string name="psw_hint">*********</string>
    <string name="remember_me">Remember me</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="forget_your_password">Forgot your password?</string>
    <string name="email">Email</string>
    <string name="create_account">Create account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="title_activity_logged_home">LoggedHomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_add_trip">Add a trip</string>
    <string name="title_trips">My trips</string>
    <string name="title_profile">My profile</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Log out</string>
    <string name="trip_name">Trip name</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="add_to_the_list">Add to the list</string>
    <string name="start">Pick a start date</string>
    <string name="end">Pick an end date</string>
    <string name="title_activity_update_user">UpdateUserActivity</string>
    <string name="password">Password</string>
    <string name="new_email">New email</string>
    <string name="new_username">New username</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="participants">Participants</string>
    <string name="payments">Payments</string>
    <string name="trip_overview">Trip overview</string>

    <string name="facebook_app_id">2245494352145295</string>
    <string name="fb_login_protocol_scheme">fb2245494352145295</string>
    <string name="email_forgot_psw">Type your email</string>
    <string name="send_back_psw">Send back password</string>
    <string name="help">Help</string>
    <string name="update_info">Update info</string>
    <string name="reset_fields">Reset fields</string>
    <string name="destination_name">Type destination name</string>
    <string name="add_destination">Add destination</string>
    <string name="status">Status</string>
    <string name="temperature">Temperature</string>
    <string name="wind">Wind</string>
    <string name="title_activity_participant_page">ParticipantPageActivity</string>
    <string name="output">Output</string>
    <string name="insert_value">Insert value</string>
    <string name="remove">Remove</string>
    <string name="add_trip">Add trip</string>
    <string name="select_a_picture_for_the_trip_not_mandatory">Select a picture for the trip (not mandatory)</string>
    <string name="upload_image">Upload image</string>
    <string name="your_trips">Your trips</string>
    <string name="trip_start">Trip start</string>
    <string name="trip_end">Trip end</string>
    <string name="delete">Delete</string>
    <string name="destinations">Destinations</string>
    <string name="city">City</string>
    <string name="weather">Weather</string>
    <string name="currency">Currency</string>
    <string name="title_activity_new_dest_page">NewDestPageActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="weather_caps">WEATHER</string>
    <string name="currency_caps">CURRENCY</string>
    <string name="todo">TODO</string>
    <string name="it">IT</string>
    <string name="currency_conversion">Convert</string>
    <string name="select_currency">Select currency</string>
    <string name="convert">Convert</string>
    <string name="eur">EUR</string>
    <string name="usd">USD</string>
    <string name="invert">Invert</string>
    <string name="username">Username</string>
    <string name="add_participant">Add participant</string>
</resources>
