<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.francesco.mytravel.activities.TripPageActivity">

    <item
        android:id="@+id/action_participants"
        android:icon="@drawable/ic_people_white_24dp"
        android:onClick="goToPage"
        android:orderInCategory="10"
        android:title="@string/participants"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_payments"
        android:icon="@drawable/ic_attach_money_white_24dp"
        android:onClick="goToPage"
        android:orderInCategory="20"
        android:title="@string/payments"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:onClick="deleteTrip"
        android:orderInCategory="30"
        android:title="@string/delete"
        app:showAsAction="never" />

</menu>
