<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.NewDestPageActivity">

    <TextView
        android:id="@+id/country_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/it"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout" />

    <ImageView
        android:id="@+id/weather_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/coins"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@id/currency_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currency_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_padding"
        android:text="@string/currency_conversion"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather_image" />

    <EditText
        android:id="@+id/currency_input_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/insert_value"
        android:inputType="number"
        android:padding="@dimen/small_padding"
        android:textColor="@color/colorProfile"
        android:textColorHint="@color/colorFields"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/currency_output_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currency_title" />

    <TextView
        android:id="@+id/currency_output_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/output"
        android:padding="@dimen/small_padding"
        android:textColor="@color/colorProfile"
        android:textColorHint="@color/colorFields"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/select_currency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currency_input_value" />

    <Button
        android:id="@+id/convert_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_login"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/small_padding"
        android:text="@string/convert"
        android:textAllCaps="false"
        android:textColor="@color/colorSecondary"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/currency_output_code"
        app:layout_constraintBottom_toTopOf="@id/reverse_codes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_currency" />


    <TextView
        android:id="@+id/currency_input_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/eur"
        android:padding="@dimen/small_padding"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorFields"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/currency_output_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/select_currency"
        app:layout_constraintTop_toBottomOf="@+id/currency_output_value" />

    <TextView
        android:id="@+id/currency_output_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/usd"
        android:padding="@dimen/small_padding"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorFields"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/reverse_codes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/convert_button"
        app:layout_constraintTop_toBottomOf="@+id/currency_input_code" />

    <Button
        android:id="@+id/select_currency"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_login"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/small_padding"
        android:onClick="showPicker"
        android:text="@string/select_currency"
        android:textAllCaps="false"
        android:textColor="@color/colorSecondary"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/convert_button"
        app:layout_constraintEnd_toStartOf="@id/currency_input_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currency_output_value" />

    <Button
        android:id="@+id/reverse_codes"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_create"
        android:clickable="true"
        android:focusable="true"
        android:drawableStart="@drawable/swap_white"
        android:padding="@dimen/small_padding"
        android:text="@string/invert"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/convert_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>